Algunos cambios en las respuestas de API Bonita